#235 Use `withEnvironment` in tests